tests/negative/traits/mismatch_receiver.orng
trait My_Trait {
    fn f(self) -> ()
}

impl My_Trait for Int {
    fn f(&self) -> () {}
}

fn main() -> Int {
    4
}